feat(open-api): Regenerated open api to add the new features
