# src/app/services/api/models/create-season-schema.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CreateSeasonSchema {
+  seasonCode: string;
+}
