# src/app/services/api/models/new-rain-log.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: Rain, schemaOptions: { title: 'NewRainLog' })
+ */
+export interface NewRainLog {
+  '_id': string;
+  date: string;
+  liters: number;
+  season: string;
+}
