# src/app/services/api/models/rain-with-relations.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: RainWithRelations, schemaOptions: { includeRelations: true })
+ */
+export interface RainWithRelations {
+  '_id': string;
+  date: string;
+  liters: number;
+  season: string;
+}
