# src/app/services/api/models/rain.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Rain {
+  '_id': string;
+  date: string;
+  liters: number;
+  season: string;
+}
