# src/app/services/api/models/seasons.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Seasons {
+  '_id': string;
+  seasonCode: string;
+}
