# src/app/services/api/services.ts
@@ -1,2 +1,4 @@
 export { PingControllerService } from './services/ping-controller.service';
+export { RainControllerService } from './services/rain-controller.service';
+export { SeasonsControllerService } from './services/seasons-controller.service';
 export { UserControllerService } from './services/user-controller.service';
